# Thesis-AI-Community

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: install-service.sh  run-forever.sh  run-ollama-forever.sh  start-ollama-local.sh  start-tmux.sh
docs/: DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  SETUP.md
src/thesis_ai/: __init__.py  config.py  main.py  personas.py
src/thesis_ai/discord_bot/: __init__.py  bot.py  commands.py  ondemand.py  runner.py  scheduler.py  targets.py  webhooks.py
src/thesis_ai/discussion/: __init__.py  engine.py  interrupt.py  session.py  store.py
src/thesis_ai/llm/: __init__.py  base.py  gemini.py  local.py  router.py
src/thesis_ai/papers/: __init__.py  fetch.py  http.py  models.py  resolve.py  trending.py
tests/: test_config.py
tests/discord_bot/: test_bot.py  test_ondemand.py  test_runner.py  test_scheduler.py  test_webhooks.py
tests/discussion/: test_engine.py  test_interrupt.py  test_session.py  test_store.py
tests/llm/: test_gemini.py  test_local.py  test_rate_limiter.py  test_router.py
tests/papers/: test_fetch.py  test_models.py  test_resolve.py  test_trending.py
